--- a/theHeartSay/project.config.json
+++ b/theHeartSay/project.config.json
@@ -2,13 +2,15 @@
 	"miniprogramRoot": "miniprogram/",
 	"cloudfunctionRoot": "cloudfunctions/",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false,
+		"checkInvalidKey": true
 	},
-	"appid": "wxca716a7a8775f213",
+	"appid": "wxa35c4bec2ba665b1",
 	"projectname": "theHeartSay",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
