--- a/theHeartSay/miniprogram/app.json
+++ b/theHeartSay/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/detail/detail",
-    "pages/index/index"
+    "pages/index/index",
+    "pages/detail/detail"
+    
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
