--- a/theHeartSay/project.config.json
+++ b/theHeartSay/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wxca716a7a8775f213",
+	"appid": "wxf4b38f28fd7cdc8b",
 	"projectname": "theHeartSay",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
