--- a/theHeartSay/miniprogram/app.json
+++ b/theHeartSay/miniprogram/app.json
@@ -6,7 +6,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "星巴克用星说",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
